# agentic-rag-enterprise

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh.md  UPSTREAM.md  pyproject.toml
docs/: agentic-rag-enterprise-build-plan.md  architecture.md  baseline-validation.md  issue-e0081-contract.md  issue-e009-contract.md  issue-e010-contract.md  issue-e011-contract.md  issue-e013-contract.md  issue-e015-contract.md  issue-e016-contract.md  issue-e018-contract.md  issue-e021-contract.md  issue-e023-contract.md  issue-e024-contract.md  upstream-capability-map.md
migrations/: 003_e0081_job_metadata.sql  009_e011_evidence_store.sql  010_e022_reconciliation.sql  011_e022_index_builds.sql  013_e023_run_checkpoints.sql
scripts/: rebuild_index.py  reconcile.py
src/agentic_rag_enterprise/: __init__.py  providers.py
tests/baseline/: test_chunking_baseline.py  test_context_compression_baseline.py  test_graph_routing_baseline.py  test_provider_baseline.py  test_query_rewrite_baseline.py  test_retrieval_baseline.py  test_tool_budget_baseline.py
tests/evals/: test_evals_harness.py
tests/fixtures/: __init__.py
tests/integration/: test_e007_end_to_end.py  test_e008_crash_points.py  test_e008_ingestion_e2e.py  test_e009_parent_secondary_auth.py  test_e010_lifecycle_e2e.py  test_e011_evidence_pipeline.py  test_e016_multi_corpus_pipeline.py  test_e017_planner_contract.py  test_e019_e020_pipeline.py  test_e022_index_migration_rollback.py  test_e022_reconciler_e2e.py  test_e023_checkpoint_resume.py  test_qdrant_hybrid_retrieval.py
tests/security/: test_parent_reader.py  (+3 more)
(+83 files in other folders)
