[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-enterprise"
version = "0.1.0"
description = "Enterprise Agentic RAG runtime with planning, corpus routing, sufficient-context checking, grounded synthesis, and evaluation."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "bzcsk2" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "fastembed>=0.3.0",
  "qdrant-client>=1.10.0",
  "pyyaml>=6.0.2",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
